# openGL

./: local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: modelTextured.fsh  modelTextured.vsh
app/src/main/java/com/example/hellojni/: AssimpActivity.java  GestureClass.java  MyGLRenderer.java  MyGLSurfaceView.java
app/src/main/jni/: CMakeLists.txt  hello-jni.c
app/src/main/jni/jniCalls/: assimpActivity.cpp  gestureClass.cpp  myGLRenderer.cpp
app/src/main/jni/nativeCode/common/: assimpLoader.cpp  assimpLoader.h  myGLFunctions.cpp
app/src/main/jni/nativeCode/modelAssimp/: modelAssimp.cpp  modelAssimp.h
app/src/main/res/layout/: assimp_layout.xml
common/ndkHelperBin/Debug/arm64-v8a/: cmake_install.cmake
common/ndkHelperBin/Debug/x86_64/: cmake_install.cmake
common/ndkHelperBin/RelWithDebInfo/armeabi-v7a/: cmake_install.cmake
common/ndkHelperBin/Release/x86/: cmake_install.cmake
common/ndkHelperBin/Release/x86_64/: cmake_install.cmake
gradle/wrapper/: gradle-wrapper.properties
